backend/src/main/java/com/example/sap_shop/error/InvalidBuyException.java
package com.example.sap_shop.error;

public class InvalidBuyException extends Exception {
    public InvalidBuyException(String message) {
        super(message);
    }
}
